---
source: regexml/src/re_compiler.rs
expression: "compiled(\"^a?b+c*$\").operation"
---
Sequence(
    Sequence {
        operations: [
            Bol(
                Bol,
            ),
            GreedyFixed(
                GreedyFixed {
                    operation: Atom(
                        Atom {
                            atom: [
                                'a',
                            ],
                            len: 1,
                        },
                    ),
                    min: 0,
                    max: 1,
                    len: 1,
                },
            ),
            GreedyFixed(
                GreedyFixed {
                    operation: Atom(
                        Atom {
                            atom: [
                                'b',
                            ],
                            len: 1,
                        },
                    ),
                    min: 1,
                    max: 18446744073709551615,
                    len: 1,
                },
            ),
            UnambiguousRepeat(
                UnambiguousRepeat {
                    operation: Atom(
                        Atom {
                            atom: [
                                'c',
                            ],
                            len: 1,
                        },
                    ),
                    min: 0,
                    max: 18446744073709551615,
                },
            ),
            Eol(
                Eol,
            ),
            EndProgram(
                EndProgram,
            ),
        ],
    },
)
